<resources>
  <string name="app_name">Marvel Characters</string>
  <string name="fragment_character_details_comics_title">Comics</string>
  <string name="fragment_character_details_series_title">Series</string>
  <string name="fragment_character_details_related_links_title">Related links</string>
  <string name="fragment_character_details_related_links_detail">DETAIL</string>
  <string name="fragment_character_details_related_links_wiki">WIKI</string>
  <string name="fragment_character_details_related_comic_link">COMICLINK</string>
  <string name="fragment_characters_search_hint">Search...</string>
  <string name="fragment_character_details_description_title">Description</string>
  <string name="fragment_character_details_stories_title">Stories</string>
  <string name="fragment_character_details_events_title">Events</string>
  <string name="fragment_comic_book_covers_close_description">Close</string>
</resources>
